Debug:Fixed few overflows in Mobile views

--- a/src/index.css
+++ b/src/index.css
@@ -35,23 +35,16 @@ button {
   background-color: #006f76;
   color: white;
 }
-input:user-invalid {
+.secured:user-invalid {
   border: 2px solid red;
 }
+
+
 /* Bot styles */
 :root {
   --base-bg1: #f4f0ff;
   --base-bg2: #dacdff;
 }
-/* 
-body {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(var(--base-bg1), var(--base-bg2));
-} */
 
 .chatbot-popup {
   overflow: hidden;
